<resources>
    <string name="app_name" translatable="false">Runeterra universe</string>
    <string name="Start">Start</string>
    <string name="Name" translatable="false">Pseudo</string>
    <string name="Select_test">Choose a test</string>
    <string-array name="array_spinner">
        <item>Région</item>
        <item>Race</item>
    </string-array>

    <string name="switchMerMont" translatable="false">.</string>

    <string name="But_Ville">City</string>

    <!-- QuestionSeekbar -->
    <string name="seek_bar_value1" translatable="false">5</string>
    <string name="seek_bar_value2" translatable="false">5</string>
    <!-- QuestionScrollView -->
    <string name="textScroll">Series of questions</string>

    <string name="Résultat">Result</string>
    <string name="Leave">Leave</string>
    <string name="QuestionReg1">Summer or Winter ?</string>
    <string name="But_ete">Summer</string>
    <string name="But_hiver">Winter</string>
    <string name="Img_ete">Desert</string>
    <string name="Img_hiver">Ice</string>
    <string name="Back">Back</string>
    <string name="QuestionReg2">See or Mountains ?</string>
    <string name="Img_Mer">See</string>
    <string name="Img_Montagne">mountains</string>
    <string name="But_Next">Next</string>
    <string name="Back2">Back</string>
    <string name="QuestionReg3">Do you prefer to Live in a city, in countryside or nature ?</string>
    <string name="But_Campagne">Countryside</string>
    <string name="But_Nature">Nature</string>
    <string name="But_Fin">Result</string>
    <string name="Img_ville">city</string>
    <string name="Img_campagne">coutnry</string>
    <string name="Img_nature">natu</string>
    <string name="Back3">Back</string>
    <string name="QuestionSeekbar1">On a ladder from 1 to 10. What is youre height ?</string>
    <string name="QuestionSeekbar2">On a ladder from 1 to 10. Do you believe in surnatural ?</string>
    <string name="ButtonNextSeekbar">Next</string>
    <string name="ButtonBackSeekbar">Back</string>
    <string name="Resultat">Name of result</string>
    <string name="ImgRes">Image of result</string>
    <string name="Back4">Back</string>
    <string name="UserRes">Username</string>
    <string name="TextQuizzChoice">Choose a quiz below</string>
    <string name="ResultDescription">Description result</string>


    <!-- Scrollview -->
    <string-array name="answer_options1">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="answer_options2">
        <item>I like living in community</item>
        <item>I prefer to be alone</item>
        <item>I prefer to live in a small group</item>
    </string-array>

    <string-array name="answer_options3">
        <item>I have a connection with nature and animals</item>
        <item>Im not close to nature</item>
        <item>I can manipulate nature for my needs</item>
    </string-array>

    <string name="QuestionScrollview1">Do you have any unusual physical characteristics</string>
    <string name="QuestionScrollview2">Do you prefer to live in a community or alone?</string>
    <string name="QuestionScrollview3">What is your relationship with nature?</string>

    <string name="ButtonNextScrollview">Next</string>
    <string name="ButtonBackScrollview">Back</string>

    <!-- ResultRace -->
    <string name="textViewRace">Username Result</string>
    <string name="textViewRaceResult">Name of the Result</string>
    <string name="imageViewRace">Username Race Result</string>
    <string name="textResultDescriptionRace">Username Race Result Description</string>

</resources>