<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionRadio">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="157dp"
        android:layout_height="171dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/But_Ville"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButtonCamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/But_Campagne"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButtonNature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/But_Nature" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/QuestionReg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="124dp"
        android:layout_height="135dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/Img_campagne"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/Campagne" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="133dp"
        android:layout_height="129dp"
        android:layout_marginStart="156dp"
        android:layout_marginBottom="124dp"
        android:contentDescription="@string/Img_nature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/Nature" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="137dp"
        android:layout_height="130dp"
        android:contentDescription="@string/Img_ville"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/ville" />

    <Button
        android:id="@+id/buttonAffRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/But_Fin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/Back3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>