<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_race"
    tools:context=".QuestionButton">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="207dp"
        android:layout_height="80dp"
        android:layout_marginTop="136dp"
        android:background="#77DAE4"
        android:fontFamily="serif"
        android:text="@string/QuestionReg1"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="417dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/Img_ete"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/desert" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="203dp"
        android:layout_height="426dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/Img_hiver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/banquise" />

    <Button
        android:id="@+id/buttonEte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/But_ete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonHiver"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonHiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="88dp"
        android:text="@string/But_hiver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/Back"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>