<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_race"
    tools:context=".QuestionScrollView">


    <Button
        android:id="@+id/button_next_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/ButtonNextSeekbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="56dp"
        android:text="@string/ButtonBackSeekbar"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next_scrollview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:background="#ECD8F6"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/QuestionScrollview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QuestionScrollview1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/answerSpinner1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/answer_options1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:background="#ECD8F6"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/QuestionScrollview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QuestionScrollview2"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/answerSpinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/answer_options2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:background="#ECD8F6"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/QuestionScrollview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/QuestionScrollview3"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/answerSpinner3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/answer_options3" />

    </LinearLayout>

    <TextView
        android:id="@+id/textScroll"
        android:layout_width="214dp"
        android:layout_height="105dp"
        android:layout_marginTop="44dp"
        android:fontFamily="serif"
        android:text="@string/textScroll"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>